# prompt-optimizer

./: README.md  baseline.py  bench.py  best_tail.json  char_hill_climb.py  debug_llm.py  debug_prompt.py  download_gsm8k.py  fast_phrase_tune.py  ga_history.csv  phrase_search.py  requirements.txt  setup.cfg  validate.py
data/: gsm8k_dev.json
notebooks/: analysis.ipynb
src/: cli.py  fitness.py  ga.py  llm_wrapper.py  main.py
tests/: test_ga_smoke.py
