[metadata]
name = prompt-optimizer
version = 0.1.1
description = Discover & benchmark LLM prompts via genetic algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    deap==1.4.3
    aiohttp==3.12.15
    tqdm==4.65.0
    openai>=0.27.0
    # plus any other deps from your requirements.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prompt-opt = cli:main
